# neural_network

./: CMakeLists.txt  README.md  adaline1.net  adaline2.net  bp1.net  test.dta
adaline_example1/: adaline_example1.cpp
adaline_example2/: adaline_example2.cpp
backpropagation_example1/: backpropagation_example1.cpp
backpropagation_example2/: backpropagation_example2.cpp
epoch_backpropagation_application/: epoch_backpropagation_application.cpp
son_example1/: son_example1.cpp
src/: Adaline.h  BackProp.h  Base.h  Common.h  EpochBP.h  GenBP.h  GenSteepness.h  Pattern.h  Son.h  Steepness.h
